--- a/Syncro.Client/syncro-frontend/index.html
+++ b/Syncro.Client/syncro-frontend/index.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="stylesheet" href="./src/Styles/Login.css" />
   <link rel="icon" type="image/png" href="/logo icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Syncro Frontend</title>
 </head>
 
-<body>
+<body class="main-body">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
