--- a/Syncro.Client/syncro-frontend/index.html
+++ b/Syncro.Client/syncro-frontend/index.html
@@ -8,7 +8,7 @@
   <title>Syncro Frontend</title>
 </head>
 
-<body class="main-body">
+<body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
