--- a/Syncro.Client/syncro-frontend/index.html
+++ b/Syncro.Client/syncro-frontend/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/logo icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="index.css" />
   <title>Syncro Frontend</title>
 </head>
 
-<body class="main-body">
+<body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
